--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,4 +1,4 @@
-.booyah-box {
+weather.png.booyah-box {
   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
   -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
   box-shadow: 1px 1px 2px 0 #d0d0d0;
@@ -14,5 +14,5 @@ h1, h2, h3, h4, h5, h6 {
   padding:0;
 }
 .body {
- background: url('/assets/symphony.png');
+ background: url('/assets/weather.png');
 }
