--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -26,3 +26,10 @@ body {
   border-radius: 0; box-shadow: 0px 1px 3px #2a2a2a;
   box-shadow: 0px 1px 3px #2a2a2a;
 }
+.navbar-inverse .navbar-brand {
+  color: #7A2412;
+  font-family: 'Slabo 27px', serif;
+  font-weight: 600;
+  letter-spacing: -0.3px;
+}
+@import url(https://fonts.googleapis.com/css?family=Slabo+27px);
