--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -1,1 +1,6 @@
-<h1> Enter Your Places Details</h1>
+<div class="booyah-box col-xs-10 col-xs-offset-1">
+  <h1>Enter Your Place Details</h1>
+  <%= simple_form_for @place do |f| %>
+    <%= f.input :name %>
+  <% end %>
+</div>
