Added simple form button

--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -2,5 +2,8 @@
   <h1>Enter Your Place Details</h1>
   <%= simple_form_for @place do |f| %>
     <%= f.input :name %>
+    <%= f.input :address %>
+    <%= f.input :description %>
+   <%= f.submit 'Create', class: 'btn btn-primary' %>
   <% end %>
 </div>
