--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<div class="booyah-box col-xs-10 col-xs-offset-1"
 <h2>Sign up</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -9,9 +10,12 @@
     <%= f.input :password_confirmation, required: true %>
   </div>
 
+ <br />
   <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+    <%= f.button :submit, "Register", class: 'btn btn-primary' %>
   </div>
+<% end %>
+<br />
 <% end %>
 
 <%= render "devise/shared/links" %>
