Added Simpleform for Comments

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -39,5 +39,8 @@ body {
   border-radius: 3px;
   padding:8px;
 }
+.clear {
+    clear: both;
+}
 
 @import url(https://fonts.googleapis.com/css?family=Slabo+27px);
