--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -52,3 +52,10 @@ var map = new google.maps.Map(document.getElementById('map'), {
   <% end %>
   </div>
 </div>
+
+<div class="clear"></div>
+<%= simple_form_for @comment, url: '#' do |f| %>
+  <%= f.input :message %>
+  <%= f.input :rating %>
+  <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
+<% end %>
