--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -49,8 +49,7 @@ var map = new google.maps.Map(document.getElementById('map'), {
     <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger' %>
   <% end %>
   </div>
-</div>
-<div class="clear"></div>
+</div><div class="clear"></div>
 <%= simple_form_for @comment, url: '#' do |f| %>
   <%= f.input :message %>
   <%= f.input :rating %>
