--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -15,7 +15,7 @@
   <% if @place.latitude.present? && @place.longitude.present? %>
 </style>
 
-    <script>
+ <script>
 
 function initMap() {
   var myLatLng = {lat: -25.363, lng: 131.044};
@@ -25,6 +25,8 @@ var map = new google.maps.Map(document.getElementById('map'), {
   zoom: 12,
   center: myLatLng
 });
+
+
 
   var marker = new google.maps.Marker({
     position: myLatLng,
@@ -38,6 +40,13 @@ var map = new google.maps.Map(document.getElementById('map'), {
         src="https://maps.googleapis.com/maps/api/js?signed_in=true&callback=initMap"></script>
 
   <div id="map"></div>
+
+  <div class="clear"></div>
+<%= simple_form_for @comment, url: '#' do |f| %>
+  <%= f.input :message %>
+  <%= f.input :rating %>
+  <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
+<% end %
  
 <% end %>
 
@@ -49,9 +58,4 @@ var map = new google.maps.Map(document.getElementById('map'), {
     <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger' %>
   <% end %>
   </div>
-</div><div class="clear"></div>
-<%= simple_form_for @comment, url: '#' do |f| %>
-  <%= f.input :message %>
-  <%= f.input :rating %>
-  <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
-<% end %>
+</div>
