--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,14 +1,15 @@
 <div class="booyah-box col-xs-10 col-xs-offset-1">
-  <h2>Sign in</h2>
+  <h2>Sign Up</h2>
   <br />
-  <%= simple_form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
+  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <div class="form-inputs">
       <%= f.input :email, required: false, autofocus: true %>
       <%= f.input :password, required: false %>
     </div>
+
     <br />
     <div class="form-actions">
-      <%= f.button :submit, "Sign in", class: 'btn btn-primary' %>
+      <%= f.button :submit, "Sign up", class: 'btn btn-primary' %>
     </div>
   <% end %>
   <br />
