--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -9,35 +9,29 @@
         margin: 0;
         padding: 0;
       }
+
   #map {
     height: 300px;
   }
-  <% if @place.latitude.present? && @place.longitude.present? %>
-</style>
-
- <script>
-
+ <% if @place.latitude.present? && @place.longitude.present? %>
+    <script>
 function initMap() {
-  var myLatLng = {lat: -25.363, lng: 131.044};
   var myLatLng = {lat: <%= @place.latitude %>, lng: <%= @place.longitude %>};
-
-var map = new google.maps.Map(document.getElementById('map'), {  
-  zoom: 12,
-  center: myLatLng
-});
-
-
-
+  var map = new google.maps.Map(document.getElementById('map'), {
+    zoom: 12,
+    center: myLatLng
+  });
   var marker = new google.maps.Marker({
     position: myLatLng,
     map: map,
     title: 'Hello World!'
   });
 }
-
     </script>
     <script async defer
         src="https://maps.googleapis.com/maps/api/js?signed_in=true&callback=initMap"></script>
+
+   <% end %>
 
   <div id="map"></div>
 
@@ -46,9 +40,8 @@ var map = new google.maps.Map(document.getElementById('map'), {
   <%= f.input :message %>
   <%= f.input :rating %>
   <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
-<% end %
- 
 <% end %>
+
 
 <br />
 
@@ -57,5 +50,5 @@ var map = new google.maps.Map(document.getElementById('map'), {
     <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
     <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger' %>
   <% end %>
+
   </div>
-</div>
