--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -13,6 +13,7 @@
   #map {
     height: 300px;
   }
+  
  <% if @place.latitude.present? && @place.longitude.present? %>
     <script>
 function initMap() {
@@ -50,5 +51,15 @@ function initMap() {
     <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
     <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger' %>
   <% end %>
+  
+  <h1>Comments</h1>
 
+<% @place.comments.each do |comment| %>
+  <div>
+    <blockquote>
+      <b><%= comment.rating %></b> -
+        <%= comment.message %>
+      <small><%= comment.user.email %></small>
+    </blockquote>
   </div>
+<% end %>
