--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -9,8 +9,8 @@
         margin: 0;
         padding: 0;
       }
-
-  #map {
+      </style>
+  map {
     height: 300px;
   }
   
@@ -39,14 +39,12 @@ function initMap() {
 <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
   <%= f.input :message %>
   <%= f.input :rating, as: :select, collection: Comment::RATINGS %>
-
-  <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
 <% end %>
 
 
 <!-- Button trigger modal -->
 <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-  Launch demo modal
+  Add a Comment
 </button>
 
 <!-- Modal -->
@@ -67,7 +65,7 @@ function initMap() {
     
     <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
+          <%= f.submit "Add a Comment2", class: 'btn btn-primary' %>
         </div>
      <% end %>
 
@@ -84,10 +82,7 @@ function initMap() {
 <div class="col-xs-10 col-xs-offset-1">
   <h1 class="pull-left">Comments</h1>
   <!-- Button trigger modal -->
-  <button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
-    Add a comment
-  </button>
-</div>
+  
 
 <div class="clear"></div>
 
