Fixed comment button

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -21,6 +21,10 @@ body {
 
 }
 
+#map {
+  height: 300px;
+}
+
 .navbar.navbar-inverse {
   background:url('/assets/symphony.png');
   border-radius: 0; box-shadow: 0px 1px 3px #2a2a2a;
