--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -3,42 +3,50 @@
   <i><%= @place.address %></i>
   <br/><br/>
   <p><%= @place.description %></p>
+
   <style>
       html, body {
         height: 100%;
         margin: 0;
         padding: 0;
       }
-      </style>
-  map {
+
+ 
+  #map {
     height: 300px;
   }
-  
+
  <% if @place.latitude.present? && @place.longitude.present? %>
+
     <script>
+
 function initMap() {
-  var myLatLng = {lat: <%= @place.latitude %>, lng: <%= @place.longitude %>};
-  var map = new google.maps.Map(document.getElementById('map'), {
-    zoom: 12,
-    center: myLatLng
-  });
+ var myLatLng = {lat: <%= @place.latitude %>, lng: <%= @place.longitude %>};
+
+  var map = new google.maps.Map(document.getElementById('map'), {  
+  zoom: 12,
+  center: myLatLng
+});
+
+
   var marker = new google.maps.Marker({
     position: myLatLng,
     map: map,
     title: 'Hello World!'
   });
 }
+
     </script>
     <script async defer
         src="https://maps.googleapis.com/maps/api/js?signed_in=true&callback=initMap"></script>
+        <div id="map"></div>
 
-   <% end %>
-
-  <div id="map"></div>
-
+ 
+<div class="clear"></div>
 <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
   <%= f.input :message %>
   <%= f.input :rating, as: :select, collection: Comment::RATINGS %>
+  <%= f.submit "Submit Your Comment", class: 'btn btn-primary' %>
 <% end %>
 
 
@@ -57,17 +65,16 @@ function initMap() {
       </div>
 
 
-  <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
-   <div class="modal-body">
+ <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
+        <div class="modal-body">
           <%= f.input :message %>
           <%= f.input :rating, as: :select, collection: Comment::RATINGS %>
-          </div>
-    
-    <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <%= f.submit "Add a Comment2", class: 'btn btn-primary' %>
         </div>
-     <% end %>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
+        </div>
+      <% end %>
 
       </div>
       <div class="modal-footer">
@@ -81,13 +88,21 @@ function initMap() {
 
 <div class="col-xs-10 col-xs-offset-1">
   <h1 class="pull-left">Comments</h1>
-  <!-- Button trigger modal -->
-  
+<!-- Button trigger modal -->
+<button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
+  Add a comment
+</button>
+  </div>
 
 <div class="clear"></div>
 
-  <div class="pull-right">
-  <% if current_user && current_user == @place.user %>
+<div class="clear"></div>
+    <div id="map"></div>
+<% end %>
+
+<br />
+
+  <div class="pull-right"><% if current_user && current_user == @place.user %>
     <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
     <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger' %>
   <% end %>
