--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,7 +1,6 @@
 <div class="booyah-box col-xs-10 col-xs-offset-1">
   <h1><%= @place.name %></h1>
   <i><%= @place.address %></i>
-  <br/><br/>
   <p><%= @place.description %></p>
 
   <style>
@@ -16,6 +15,7 @@
     height: 300px;
   }
 </style>
+
  <% if @place.latitude.present? && @place.longitude.present? %>
 
     <script>
@@ -47,6 +47,12 @@ function initMap() {
   <%= f.input :message %>
   <%= f.input :rating, as: :select, collection: Comment::RATINGS %>
   <%= f.submit "Submit Your Comment", class: 'btn btn-primary' %>
+<% end %>
+
+<div class="clear"></div>
+<%= simple_form_for @photo, url: '#' do |f| %>
+  <%= f.input :caption %>
+  <%= f.submit "Add a Caption", class: 'btn btn-primary' %>
 <% end %>
 
 
