--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -43,7 +43,7 @@ function initMap() {
 
 
 <div class="clear"></div>
-<%= simple_form_for @photo, url: '#' do |f| %>
+<%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
   <%= f.input :caption %>
   <%= f.submit "Submit", class: 'btn btn-primary' %>
 <% end %>
