--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -8,7 +8,7 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-     <%= image_tag 'slider1.jpeg' %>
+     <%= image_tag 'slider1.jpeg', class: 'img-responsive' %>
      <div class="carousel-caption">
          Find the best pizza places
     </div>
@@ -16,7 +16,7 @@
 </div>
 
    <div class="item">
-   <%= image_tag 'slider2.jpeg' %>
+   <%= image_tag 'slider2.jpeg', class: 'img-responsive' %>
     <div class="carousel-caption">
     Looking for hotdogs?
     </div>
